add next job example

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,3 +15,5 @@ spring:
         query:
           plan_cache_max_size: 32
           plan_parameter_metadata_max_size: 64
+
+spring.batch.job.names: ${job.name:NONE}
