add jpa paging item reader job config

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,3 +17,4 @@ spring:
           plan_parameter_metadata_max_size: 64
 
 spring.batch.job.names: ${job.name:NONE}
+logging.level.org.springframework.batch: DEBUG
